fix issues with home page search on mobile devices
 - search input should not be visible over drop-down nav menu

 - fix issue where keyboard was not coming up on mobile devices due to
   twitter-typeahead-rails interaction with search input

--- a/app/assets/stylesheets/commonwealth-vlr-engine/header.scss
+++ b/app/assets/stylesheets/commonwealth-vlr-engine/header.scss
@@ -198,7 +198,7 @@
   left: 7px;
   top: 9px;
   width: 98%;
-  z-index: 20;
+  z-index: 1001; /* to cover twitter-typeahead in home page search bar */
 }
 
 .navbar-collapse {
